added OAuth to the project
