# routes/developers.js
@@ -1,10 +1,13 @@
 const router = require("express").Router();
-const developersController = require("../controllers/developers.js");
+
+const developersController = require("../controllers/developers");
+const { isAuthenticated } = require("../middleware/authenticate");
 
 router.get("/", developersController.getAll);
 router.get("/:id", developersController.getSingle);
-router.post("/", developersController.createDeveloper);
-router.put("/:id", developersController.updateDeveloper);
-router.delete("/:id", developersController.deleteDeveloper);
+
+router.post("/", isAuthenticated, developersController.createDeveloper);
+router.put("/:id", isAuthenticated, developersController.updateDeveloper);
+router.delete("/:id", isAuthenticated, developersController.deleteDeveloper);
 
 module.exports = router;
